{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 147,
  "lineage": "417fb468-8827-31ce-52e6-bcb7fdc177da",
  "resources": [
    {
      "module": "module.container_app.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:560276875947:loadbalancer/app/container-app-alb/b0322419b25dd455",
            "arn_suffix": "app/container-app-alb/b0322419b25dd455",
            "desync_mitigation_mode": "defensive",
            "dns_name": "container-app-alb-1629489684.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:560276875947:loadbalancer/app/container-app-alb/b0322419b25dd455",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "container-app-alb",
            "security_groups": [
              "sg-00dece43b5fc35f64"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08ef1942cfd5eebf4"
              },
              {
                "subnet_id": "subnet-0dd439a80ed95ec2a"
              },
              {
                "subnet_id": "subnet-0f7c726c73cf7ab08"
              }
            ],
            "subnets": [
              "subnet-08ef1942cfd5eebf4",
              "subnet-0dd439a80ed95ec2a",
              "subnet-0f7c726c73cf7ab08"
            ],
            "tags": {
              "Name": "container-app-alb"
            },
            "tags_all": {
              "Name": "container-app-alb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0cf264e1396d089dd",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.container_app.module.security_group_alb.aws_security_group.this",
            "module.container_app.module.security_group_alb.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.container_app.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:560276875947:listener/app/container-app-alb/b0322419b25dd455/3403b6fc1f9cf029",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:560276875947:targetgroup/h120220127174348034200000004/8ab775955bf15e9e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:560276875947:listener/app/container-app-alb/b0322419b25dd455/3403b6fc1f9cf029",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:560276875947:loadbalancer/app/container-app-alb/b0322419b25dd455",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.container_app.module.alb.aws_lb.this",
            "module.container_app.module.alb.aws_lb_target_group.main",
            "module.container_app.module.security_group_alb.aws_security_group.this",
            "module.container_app.module.security_group_alb.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.container_app.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:560276875947:targetgroup/h120220127174348034200000004/8ab775955bf15e9e",
            "arn_suffix": "targetgroup/h120220127174348034200000004/8ab775955bf15e9e",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:560276875947:targetgroup/h120220127174348034200000004/8ab775955bf15e9e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "h120220127174348034200000004",
            "name_prefix": "h1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "h1"
            },
            "tags_all": {
              "Name": "h1"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0cf264e1396d089dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.container_app.module.security_group_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560276875947:security-group/sg-00dece43b5fc35f64",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "ECS service security group",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d13b651d6825ae36"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "id": "sg-00dece43b5fc35f64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "container-app-sg-alb-20220127174348029900000001",
            "name_prefix": "container-app-sg-alb-",
            "owner_id": "560276875947",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "container-app-sg-alb"
            },
            "tags_all": {
              "Name": "container-app-sg-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf264e1396d089dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.container_app.module.security_group_alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "ECS service security group",
            "from_port": 5000,
            "id": "sgrule-1250101115",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00dece43b5fc35f64",
            "self": false,
            "source_security_group_id": "sg-0d13b651d6825ae36",
            "to_port": 5000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.container_app.module.security_group_alb.aws_security_group.this",
            "module.container_app.module.security_group_alb.aws_security_group.this_name_prefix",
            "module.container_app.module.security_group_ecs.aws_security_group.this",
            "module.container_app.module.security_group_ecs.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.container_app.module.security_group_alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1647687312",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00dece43b5fc35f64",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.container_app.module.security_group_alb.aws_security_group.this",
            "module.container_app.module.security_group_alb.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.container_app.module.security_group_ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.container_app.module.security_group_ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560276875947:security-group/sg-0d13b651d6825ae36",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d13b651d6825ae36",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00dece43b5fc35f64"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "container-app-sg-ecs-20220127174348029900000002",
            "name_prefix": "container-app-sg-ecs-",
            "owner_id": "560276875947",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "container-app-sg-ecs"
            },
            "tags_all": {
              "Name": "container-app-sg-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf264e1396d089dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.container_app.module.security_group_ecs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3970782535",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d13b651d6825ae36",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.container_app.module.security_group_ecs.aws_security_group.this",
            "module.container_app.module.security_group_ecs.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.container_app.module.security_group_ecs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 5000,
            "id": "sgrule-917392234",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d13b651d6825ae36",
            "self": false,
            "source_security_group_id": "sg-00dece43b5fc35f64",
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.container_app.module.security_group_alb.aws_security_group.this",
            "module.container_app.module.security_group_alb.aws_security_group.this_name_prefix",
            "module.container_app.module.security_group_ecs.aws_security_group.this",
            "module.container_app.module.security_group_ecs.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560276875947:internet-gateway/igw-05f51a8f25f85fe92",
            "id": "igw-05f51a8f25f85fe92",
            "owner_id": "560276875947",
            "tags": {
              "Name": "Monorepo",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Monorepo",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf264e1396d089dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05f51a8f25f85fe92",
            "id": "r-rtb-06cbe30443db148ba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06cbe30443db148ba",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560276875947:route-table/rtb-08f1c3167d8a91f09",
            "id": "rtb-08f1c3167d8a91f09",
            "owner_id": "560276875947",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Monorepo-private-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Monorepo-private-eu-west-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf264e1396d089dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560276875947:route-table/rtb-077d05cf6e15c7fb8",
            "id": "rtb-077d05cf6e15c7fb8",
            "owner_id": "560276875947",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Monorepo-private-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Monorepo-private-eu-west-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf264e1396d089dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560276875947:route-table/rtb-013185492b81e3d34",
            "id": "rtb-013185492b81e3d34",
            "owner_id": "560276875947",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Monorepo-private-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Monorepo-private-eu-west-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf264e1396d089dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560276875947:route-table/rtb-06cbe30443db148ba",
            "id": "rtb-06cbe30443db148ba",
            "owner_id": "560276875947",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f51a8f25f85fe92",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Monorepo-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Monorepo-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf264e1396d089dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e7a26219ed81f29",
            "route_table_id": "rtb-08f1c3167d8a91f09",
            "subnet_id": "subnet-0fa00217b271b8aa8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03157d2162435c07a",
            "route_table_id": "rtb-077d05cf6e15c7fb8",
            "subnet_id": "subnet-090893ec3b4da4209"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7ac6e1825daf705",
            "route_table_id": "rtb-013185492b81e3d34",
            "subnet_id": "subnet-042a0b933078a1fdf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f001084fbbda2bf8",
            "route_table_id": "rtb-06cbe30443db148ba",
            "subnet_id": "subnet-08ef1942cfd5eebf4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c99b4a2f2c8d156",
            "route_table_id": "rtb-06cbe30443db148ba",
            "subnet_id": "subnet-0dd439a80ed95ec2a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdeca012761b69b1",
            "route_table_id": "rtb-06cbe30443db148ba",
            "subnet_id": "subnet-0f7c726c73cf7ab08"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560276875947:subnet/subnet-0fa00217b271b8aa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa00217b271b8aa8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560276875947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Monorepo-private-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Monorepo-private-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf264e1396d089dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560276875947:subnet/subnet-090893ec3b4da4209",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090893ec3b4da4209",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560276875947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Monorepo-private-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Monorepo-private-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf264e1396d089dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560276875947:subnet/subnet-042a0b933078a1fdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042a0b933078a1fdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "560276875947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Monorepo-private-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Monorepo-private-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf264e1396d089dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560276875947:subnet/subnet-08ef1942cfd5eebf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ef1942cfd5eebf4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "560276875947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Monorepo-public-eu-west-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Monorepo-public-eu-west-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf264e1396d089dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560276875947:subnet/subnet-0dd439a80ed95ec2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd439a80ed95ec2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "560276875947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Monorepo-public-eu-west-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Monorepo-public-eu-west-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf264e1396d089dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560276875947:subnet/subnet-0f7c726c73cf7ab08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7c726c73cf7ab08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "560276875947",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Monorepo-public-eu-west-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Monorepo-public-eu-west-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cf264e1396d089dd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:560276875947:vpc/vpc-0cf264e1396d089dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a1219adf8eccf703",
            "default_route_table_id": "rtb-0d911f42f6f9fff5e",
            "default_security_group_id": "sg-0144799467c76e893",
            "dhcp_options_id": "dopt-0e66cb70053903367",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cf264e1396d089dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d911f42f6f9fff5e",
            "owner_id": "560276875947",
            "tags": {
              "Name": "Monorepo",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "Monorepo",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}